--- a/src/main/resources/Insert_Username.fxml
+++ b/src/main/resources/Insert_Username.fxml
@@ -33,7 +33,7 @@
                   <Font size="14.0" />
                </font>
             </TextField>
-            <Button fx:id="submitUsernameButton" mnemonicParsing="false" onAction="#onClickUSubmitUsernameButton" prefHeight="27.0" prefWidth="96.0" style="-fx-background-color: #ffc033; -fx-border-radius: 15; -fx-background-radius: 15;" text="Submit">
+            <Button fx:id="submitUsernameButton" mnemonicParsing="false" onAction="#onClickUSubmitUsernameButton" prefHeight="27.0" prefWidth="96.0" style="-fx-background-color: #ffc033; -fx-border-radius: 15; -fx-background-radius: 15;" stylesheets="@Style.css" text="Submit">
                <font>
                   <Font size="14.0" />
                </font>
@@ -43,7 +43,7 @@
                   <Font size="25.0" />
                </font>
             </Text>
-            <Button fx:id="quitButtonBeforeRunning" mnemonicParsing="false" onAction="#onQuitButtonBeforeRunning" prefHeight="26.0" prefWidth="69.0" style="-fx-background-color: #ffc033; -fx-border-radius: 15; -fx-background-radius: 15;" text="Quit">
+            <Button fx:id="quitButtonBeforeRunning" mnemonicParsing="false" onAction="#onQuitButtonBeforeRunning" prefHeight="26.0" prefWidth="69.0" style="-fx-background-color: #ffc033; -fx-border-radius: 15; -fx-background-radius: 15;" stylesheets="@Style.css" text="Quit">
                <font>
                   <Font size="14.0" />
                </font>
