--- a/src/main/resources/WaitingPlayersToConnect.fxml
+++ b/src/main/resources/WaitingPlayersToConnect.fxml
@@ -42,7 +42,7 @@
                         <Insets />
                      </VBox.margin>
                   </StackPane>
-                  <Button fx:id="quitButtonBeforeRunning" mnemonicParsing="false" onAction="#onQuitButtonBeforeRunning" prefHeight="26.0" prefWidth="69.0" style="-fx-background-color: #ffc033; -fx-border-radius: 15; -fx-background-radius: 15;" text="Quit">
+                  <Button fx:id="quitButtonBeforeRunning" mnemonicParsing="false" onAction="#onQuitButtonBeforeRunning" prefHeight="26.0" prefWidth="69.0" style="-fx-background-color: #ffc033; -fx-border-radius: 15; -fx-background-radius: 15;" stylesheets="@Style.css" text="Quit">
                      <font>
                         <Font size="14.0" />
                      </font>
